--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "authentication",
+  "name": "e-commerce",
   "version": "1.0.0",
-  "description": "authentication app using express.js,mongodb,nodejs,react,tailwindcss",
+  "description": "e-commerce app using express.js,mongodb,nodejs,react,tailwindcss",
   "type": "module",
   "main": "Server.js",
   "scripts": {
+    "start": "nodemon Server.js",
     "server": "nodemon Server.js",
-    "start": "node Server.js"
+    "client": "npm start --prefix ./client",
+    "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "keywords": [
     "express.js",
@@ -18,18 +20,27 @@
   "author": "Shifan",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.2",
+    "@mui/material": "^7.1.2",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
+    "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "react-router-dom": "^7.5.3",
+    "react-toastify": "^11.0.5",
+    "slugify": "^1.6.6"
   }
 }
