--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "react-router-dom": "^7.5.3",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6"
   }
 }
